--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ plugins:
   - jekyll-feed
 
 sass:
-  style: compact
+  style: compressed
 
 # Exclude from processing.
 # The following items will not be processed, by default.
