--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Keunhong Park
-name: Keunhong Park
+title: Mohammed Alnemari
+name: Mohammed Alnemari
 position: Research Scientist 
 email: dp9jalxhq@mozmail.com
 description: >-
