--- a/_config.yml
+++ b/_config.yml
@@ -21,12 +21,12 @@
 title: Mohammed Alnemari
 name: Mohammed Alnemari
 position: Assistant Professor in Computer Engineering
-email: your-email@example.com
+email: malnemar@uci.edu
 description: >-
   I am an Assistant Professor in Computer Engineering specializing in AI, TinyML, and Deep Learning. I have a strong background in computer vision, game development, and research in neural networks. My work focuses on advancing technology in areas like IoT, healthcare, and education.
 
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://yourwebsite.com" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://alnemari-m.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: alnemari-m
 github_username: alnemari-m
 google_scholar: ukW6rG0AAAAJ
