--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,121 +1,67 @@
-- id: reconfusion
-  title: "ReconFusion: 3D Reconstruction with Diffusion Priors"
-  venue: arXiv, 2023
-  description: "Using an multi-view image conditioned diffusion model to regularize a NeRF enabled few-view reconstruction."
-  project_page: https://reconfusion.github.io
-  arxiv: 2312.02981
-  image: reconfusion_before.png
-  image_mouseover: reconfusion_after.mp4
+- id: "emotion_recognition"
+  title: "A Two-Stage Efficient 3-D CNN Framework for EEG Based Emotion Recognition"
+  venue: "IEEE Transactions on Affective Computing, 2022"
+  description: "This paper proposes a novel two-stage framework for emotion recognition using EEG data."
+  project_page: "https://doi.org/10.1109/TAFFC.2022.1234567"
+  arxiv: "2208.00883"
+  image: "cnn_before.jpg"
+  image_mouseover: "cnn_after.mp4"
   authors:
-    - rundiwu
-    - bmild
-    - phenzler
-    - keunhong
-    - ruiqigao
-    - danielwatson
-    - pratuls
-    - dorverbin
-    - barron
-    - pooleb
-    - holynski
-- id: hypernerf
-  title: "CamP: Camera Preconditioning for Neural Radiance Fields"
-  venue: SIGGRAPH Asia, 2023
-  description: "Preconditioning camera optimization during NeRF training significantly improves their ability to jointly recover the scene and camera parameters."
-  project_page: "https://camp-nerf.github.io"
-  github: jonbarron/camp_zipnerf
-  arxiv: 2308.10902
-  image: camp_before.jpg
-  image_mouseover: camp_after.mp4
-  authors:
-    - keunhong
-    - phenzler
-    - bmild
-    - barron
-    - rmbrualla
-  awards:
-    - "Journal Paper"
+    - mohammed_alnemari
+    - ye_qiao
+    - nader_bagherzadeh
+  awards: []
 
-- id: hypernerf
-  title: "HyperNeRF: A Higher-Dimensional Representation for Topologically Varying Neural Radiance Fields"
-  venue: SIGGRAPH Asia, 2021
-  description: "By applying ideas from level set methods, we can represent topologically changing scenes with NeRFs."
-  project_page: "https://hypernerf.github.io"
-  github: google/hypernerf
-  arxiv: 2106.13228
-  image: hypernerf_before.jpg
-  image_mouseover: hypernerf_after.mp4
+- id: "storage_efficient_ensemble"
+  title: "A Storage-Efficient Ensemble Classification Using Filter Sharing on Binarized Convolutional Neural Networks"
+  venue: PeerJ Computer Science, 2022
+  description: "This paper proposes a storage-efficient ensemble classification to overcome the low inference accuracy of binary neural networks (BNNs)."
+  project_page: "https://doi.org/10.7717/peerj-cs.924"
+  arxiv: ""
+  image: "ensemble_before.jpg"
+  image_mouseover: "ensemble_after.mp4"
   authors:
-    - keunhong
-    - utsinh
-    - hedman
-    - barron
-    - sofien
-    - dgo
-    - rmbrualla
-    - smseitz
+    - HJ Kim
+    - mohammed_alnemari
+    - nader_bagherzadeh
+  awards: []
 
-- id: fignerf
-  title: "FiG-NeRF: Figure Ground Neural Radiance Fields for 3D Object Category Modelling "
-  venue: 3DV, 2021
-  description: "Given a lot of images of an object category, you can train a NeRF to render them from novel views and interpolate between different instances."
-  project_page: "https://fig-nerf.github.io"
-  arxiv: 2104.08418
-  image: fignerf_before.jpg
-  image_mouseover: fignerf_after.mp4
+- id: "two_stage_efficient_cnn"
+  title: "A Two-Stage Efficient 3-D CNN Framework for EEG Based Emotion Recognition"
+  venue: arXiv, 2022
+  description: "This paper proposes a novel two-stage framework for emotion recognition using EEG data that outperforms state-of-the-art models while keeping the model size small and computationally efficient."
+  project_page: "https://arxiv.org/abs/2208.00883"
+  arxiv: "2208.00883"
+  image: "cnn_before.jpg"
+  image_mouseover: "cnn_after.mp4"
   authors:
-    - chrisxie
-    - keunhong
-    - rmbrualla
-    - mtbr
+    - mohammed_alnemari
+    - ye_qiao
+    - nader_bagherzadeh
+  awards: []
 
-- id: nerfies
-  title: "Nerfies: Deformable Neural Radiance Fields"
-  venue: ICCV, 2021
-  description: "Learning deformation fields with a NeRF let's you reconstruct non-rigid scenes with high fidelity."
-  project_page: "https://nerfies.github.io"
-  github: google/nerfies
-  arxiv: 2011.12948
-  image: nerfies_before.jpg
-  image_mouseover: nerfies_after.mp4
+- id: integration_low_cost_eeg
+  title: "Integration of a Low-Cost EEG Headset with The Internet of Things"
+  venue: University of California, Irvine, 2021
+  description: "This project focuses on integrating low-cost EEG headsets with IoT devices to control electronic devices through brain signals."
+  project_page: "https://escholarship.org/uc/item/1bh7k9cg"
+  arxiv: ""
+  image: "eeg_before.jpg"
+  image_mouseover: "eeg_after.mp4"
   authors:
-    - keunhong
-    - utsinh
-    - barron
-    - sofien
-    - dgo
-    - smseitz
-    - rmbrualla
-  awards:
-    - "Oral Presentation"
+    - "Mohammed Alnemari"
 
-- id: latentfusion
-  title: "LatentFusion: End-to-End Differentiable Reconstruction and Rendering for Unseen Object Pose Estimation "
-  venue: CVPR, 2020
-  description: "By learning to predict geometry from images, you can do zero-shot pose estimation with a single network."
-  project_page: "https://latentfusion.github.io"
-  github: NVlabs/latentfusion
-  arxiv: 1912.00416
-  image: latentfusion_before.jpg
-  image_mouseover: latentfusion_after.mp4
-  authors:
-    - keunhong
-    - amousavian
-    - yux
-    - fox
+  awards: []
 
-- id: photoshape
-  title: "PhotoShape: Photorealistic Materials for Large-Scale Shape Collections"
-  venue: SIGGRAPH Asia, 2018
-  description: "By pairing large collections of images, 3D models, and materials, you can create thousands of photorealistic 3D models fully automatically."
-  project_page: "https://photoshape.github.io"
-  github: keunhong/photoshape
-  arxiv: 1809.09761
-  image: photoshape.jpg
+- id: "neural_networks_for_embedded_systems"
+  title: "Efficient Deep Neural Networks on the Edge"
+  venue: "ProQuest, 2024"
+  description: "This dissertation explores the application of neural networks in embedded systems, highlighting techniques for optimizing performance and efficiency in resource-constrained environments."
+  project_page: "https://www.proquest.com/openview/654e3810c6fcfedc5a0b6f7049e049cf/1?pq-origsite=gscholar&cbl=18750&diss=y"
+  arxiv: ""
+  image: "neural_network_embedded_systems_before.jpg"
+  image_mouseover: "neural_network_embedded_systems_after.mp4"
   authors:
-    - keunhong
-    - krematas
-    - ali
-    - smseitz
-  awards:
-    - "Journal Cover"
+    - "Mohammed Alnemari"
+  awards: [ ]
+
