--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -61,6 +61,6 @@
   image: "neural_network_embedded_systems_before.jpg"
   image_mouseover: "neural_network_embedded_systems_after.mp4"
   authors:
-    - "Mohammed Alnemari"
+    - "Mohammed Alnemarix"
   awards: [ ]
 
