--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -25,7 +25,7 @@
   awards: []
 
 - id: "two_stage_efficient_cnn"
-  title: "A Two-Stage Efficient 3-D CNN Framework for EEG-Based Emotion Recognition"
+  title: "A Two Stage Efficient 3D CNN Framework for EEG-Based Emotion Recognition"
   venue: "IEEE International Conference on Industrial Technology (ICIT)"
   description: "This paper proposes a novel two-stage framework for emotion recognition using EEG data that outperforms state-of-the-art models while keeping the model size small and computationally efficient."
   project_page: "https://arxiv.org/abs/2208.00883"
