--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -27,8 +27,8 @@
   title: "A Two-Stage Efficient 3-D CNN Framework for EEG-Based Emotion Recognition"
   venue: "IEEE International Conference on Industrial Technology (ICIT)"
   description: "This paper proposes a novel two-stage framework for emotion recognition using EEG data that outperforms state-of-the-art models while keeping the model size small and computationally efficient."
-  project_page: "https://arxiv.org/abs/2208.00883"
-  arxiv: ""
+  project_page: "https://alnemari-m.github.io/3d_EGG/"
+  arxiv: "https://arxiv.org/abs/2208.00883"
   image: "cnn_before.jpg"
   image_mouseover: "cnn_after.mp4"
   authors:
